RESOLVED FIXED88887
[chromium] Fix incorrect LayerChromium scroll position for RTL overflow pages
https://bugs.webkit.org/show_bug.cgi?id=88887
Summary [chromium] Fix incorrect LayerChromium scroll position for RTL overflow pages
Adrienne Walker
Reported 2012-06-12 10:27:29 PDT
[chromium] Fix incorrect LayerChromium scroll position for RTL overflow pages
Attachments
Patch (7.11 KB, patch)
2012-06-12 10:32 PDT, Adrienne Walker
no flags
Adrienne Walker
Comment 1 2012-06-12 10:32:23 PDT
James Robinson
Comment 2 2012-06-12 10:34:54 PDT
Comment on attachment 147111 [details] Patch R=me seems pretty testable though - make an RTL page with scrollbars and x-overflow, scroll it to the left a bit, dump pixels?
Adrienne Walker
Comment 3 2012-06-12 10:39:20 PDT
This is the same as bug 88882: the problem only when you are using ScrollbarLayerChromium. My latest patch in bug 88145 will turn on ScrollbarLayerChromium even when using single-threaded mode, so we will get the benefit of layout tests hitting this code.
WebKit Review Bot
Comment 4 2012-06-12 12:55:46 PDT
Comment on attachment 147111 [details] Patch Clearing flags on attachment: 147111 Committed r120105: <http://trac.webkit.org/changeset/120105>
WebKit Review Bot
Comment 5 2012-06-12 12:55:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.